--- a/deno.json
+++ b/deno.json
@@ -3,6 +3,8 @@
     "dev": "deno run --watch main.ts",
   },
   "imports": {
-    "@std/assert": "jsr:@std/assert@1"
+    "@modelcontextprotocol/sdk": "npm:@modelcontextprotocol/sdk@^1.11.0",
+    "@std/assert": "jsr:@std/assert@1",
+    "zod": "npm:zod@^3.24.3"
   }
 }
